--- a/src/assets/css/_github-band.styl
+++ b/src/assets/css/_github-band.styl
@@ -5,7 +5,8 @@
   background dark-green
   padding (small-padding-block - 3) 0
 .last-updated
-  margin 14px 0 (-(xs-padding-block - 2)) 0
+  margin-top: 14px
+  margin-bottom: (-(xs-padding-block - 2))
   white-space nowrap
   +below(small-snap)
     column(1)
